2001-06-16  Thomas E. Dickey  <dickey@clark.net>

	* AcSplit/CF_PROG_EXT:
	add PROG_EXT in quotes, for ncurses' programs that check if they're renamed

	* AcSplit/CF_MAKEFLAGS:
	aha: set SHELL in the test-makefile to make warnings go away

	* AcSplit/CF_CPP_VSCAN_FUNC: ugh: add strstream_cast case

2001-06-09  Thomas E. Dickey  <dickey@clark.net>

	* config.sub: tin 1.5.9

2001-06-03  Thomas E. Dickey  <dickey@clark.net>

	* AcSplit/CF_NCURSES_VERSION:
	lynx: make this a little more paranoid wrt cleaning up tempfiles

2001-05-27  Thomas E. Dickey  <dickey@clark.net>

	* AcSplit/CF_FIX_SLASHES: RCS_BASE

	* AcSplit/CF_POSIX_JC:
	autoconf 2.50 warned about an AC_DEFINE in a questionable location

	* AcSplit/CF_FIX_SLASHES, AcSplit/CF_PATH_MAILER, AcSplit/CF_POSIX_JC:
	ci-aclocal generated header

	* AcSplit/CF_MAKEFLAGS:
	fix a "no match" problem on OS/2 EMX by setting SHELL in the test-makefile.
	That fixes a problem with the echo, which apparently did not strip single quotes
	unless the shell was given.

	* AcSplit/CF_PATH_MAILER: fix/workaround for OS/2 pathnames

2001-05-26  Thomas E. Dickey  <dickey@clark.net>

	* AcSplit/CF_LOCKFILE: RCS_BASE

	* AcSplit/CF_LOCKFILE: ci-aclocal generated header

2001-05-19  Thomas E. Dickey  <dickey@clark.net>

	* AcSplit/CF_LIB_RULES:
	fix for --disable-overwrite (it was only allowing overwrite of the first
	library)
	add "make depend" rule

	* config.sub, config.guess: autoconf 2.50

2001-05-13  Thomas E. Dickey  <dickey@clark.net>

	* AcSplit/CF_CURS_TOUCHLINE: RCS_BASE

	* AcSplit/CF_CURS_TOUCHLINE: ci-aclocal generated header

	* AcSplit/CF_NCURSES_VERSION:
	define NCURSES as a side-effect (use for lynx)

	* AcSplit/CF_CURSES_CPPFLAGS, AcSplit/CF_NCURSES_CPPFLAGS:
	test for ncurses.h after curses.h

2001-05-02  Thomas E. Dickey  <dickey@clark.net>

	* install.sh: better version, from tin 1.5.9, which cites X11R5

2001-04-28  Thomas E. Dickey  <dickey@clark.net>

	* AcSplit/CF_X_FREETYPE: add XRENDERFONT ifdef
